# Simultaneous-Interpretation

./: .env.example  .gitignore  CLAUDE.md  README.md  index.html  pyproject.toml
.claude/: settings.json
config/: default.yaml
docs/: design.md  feature-plan-v2.md  presentation.md
server/: asr.js  commit.js  package-lock.json  package.json  providers.js  server.js  tts.js
src/interp/: __init__.py  config.py  main.py  models.py  pipeline.py
src/interp/asr/: base.py  whisper_local.py
src/interp/translation/: base.py  deepl_provider.py
src/interp/tts/: base.py  openai_tts.py
web/: app.js  demo.css  demo.html  index.html  overlay.html  style.css
