[project]
name = "ai-interpreter"
version = "0.1.0"
description = "AI Simultaneous Interpretation Assistant"
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "typer>=0.9",
    "rich>=13.0",
    "sounddevice>=0.4",
    "numpy>=1.24",
    "pydub>=0.25",
    "deepgram-sdk>=3.0",
    "faster-whisper>=0.10",
    "deepl>=1.16",
    "anthropic>=0.25",
    "openai>=1.12",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]
web = [
    "gradio>=4.0",
]

[project.scripts]
interp = "interp.main:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
